<resources>
    <string name="app_name">GoalTracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="shared_prefs_file_key">shared_prefs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action">Action</string>
    <string name="subgoal">Sub-Goal</string>
    <string name="done">done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="action_name">Action Name</string>
    <string name="repeat">Repeat</string>
    <string name="goal_name">Goal Name</string>
    <string name="goal_description">Goal Description</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="per_day">per day</string>
    <string name="per_week">per week</string>
    <string name="per_month">per month</string>

    <string name="goal_date_clear_button_content_description">Clear goal date</string>
    <string name="save_button_title">save</string>
    <string name="add_button_title">add</string>

    //Add goal error messages
    <string name="date_too_early">Date must be after today\'s date</string>
    <string name="invalid_date">Invalid date</string>
    <string name="missing_date">Date Required</string>
    <string name="missing_name">Name Required</string>

    //Add action error messages
    <string name="invalid_repeat_amount">Enter valid repeat amount</string>
    
    <string name="action_updated_message">Action updated</string>
    <string name="action_update_error_message">Failed to update action. Please try again</string>

    <string name="action_deleted_message">Action deleted</string>
    <string name="action_delete_error_message">Failed to delete action. Please try again</string>

    <string name="delete_sub_goals_first_message">You need to delete sub-goals first</string>
    <string name="complete_sub_goals_first_message">You need to complete sub-goals first</string>
    <string name="completed_goal_congratulations_message">Congratulations on achieving your goal!</string>
    <string name="goal_and_actions_deleted_message">Goal and actions deleted</string>
    <string name="goal_and_actions_deleted_error_message">Failed to delete</string>


    <string name="ellipsis">⋮</string>
    <string name="date_hint">Select Date</string>
    <string name="to_achieve_by">To Achieve By</string>

    <string name="repeat_times">times(s)</string>
    <string name="repeat_hours_minutes">hours:minutes</string>
    <array name="repeat_units_of_measurements">
        <item>@string/repeat_times</item>
        <item>@string/repeat_hours_minutes</item>
        <!--<item>day(s)</item>-->
    </array>
    <array name="repeat_time_periods">
        <item>per day</item>
        <item>per week</item>
        <item>per month</item>
    </array>
</resources>
