<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AddGoal.AddGoalActivity"
    android:padding="40dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_goal_name_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_goal_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal_name"
            android:inputType="textCapSentences"
            android:textAlignment="center" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_goal_description_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/add_goal_description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal_description"
            android:inputType="textCapSentences|textMultiLine"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/to_achieve_by"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_goal_date_textview"
            android:hint="@string/date_hint"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/add_goal_date_clear"
            android:visibility="invisible"
            android:layout_toRightOf="@id/add_goal_date_textview"
            android:layout_toEndOf="@id/add_goal_date_textview"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:tint="@color/colorPrimary"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/goal_date_clear_button_content_description" />

    </RelativeLayout>

</LinearLayout>